k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/cqu-site-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: API_DEBUG
              value: "yes"
            - name: DB_HOST
              value: postgres
            - name: DB_PASSWORD
              value: secret
          image: api
          name: api
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
            - containerPort: 8765
              hostPort: 8765
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /srv/api
              name: api-claim0
            - mountPath: /srv/files/lab/work-units
              name: lab-work-attachments
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
        - name: lab-work-attachments
          persistentVolumeClaim:
            claimName: lab-work-attachments
status: {}
