k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/cqu-site-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: ghcr.io/cqueng/lab-requests-app
          name: app
          resources: {}
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      restartPolicy: Always
status: {}
