k8s/pg-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: pg-admin
  name: pg-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-admin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/cqu-site-default: "true"
        io.kompose.service: pg-admin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: tom@ovangle.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: secret
          image: dpage/pgadmin4:7
          name: pg-admin
          resources: {}
      restartPolicy: Always
status: {}
