k8s/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.network/cqu-site-default: "true"
    io.kompose.service: postgres
  name: postgres
spec:
  containers:
    - env:
        - name: POSTGRES_PASSWORD
          value: secret
      image: postgres
      name: postgres
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
  restartPolicy: OnFailure
  volumes:
    - name: pgdata
      persistentVolumeClaim:
        claimName: pgdata
status: {}
