k8s/public-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: public
  name: public
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: public
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/cqu-site-default: "true"
        io.kompose.service: public
    spec:
      containers:
        - image: nginx:1.25
          name: public
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: public-claim0
              readOnly: true
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      restartPolicy: Always
      volumes:
        - name: public-claim0
          persistentVolumeClaim:
            claimName: public-claim0
            readOnly: true
status: {}
