k8s/filesrv-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: filesrv
  name: filesrv
spec:
  ports:
    - name: "6767"
      port: 6767
      targetPort: 80
  selector:
    io.kompose.service: filesrv
status:
  loadBalancer: {}
