k8s/pg_admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: pg-admin
  name: pg_admin
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 80
  selector:
    io.kompose.service: pg-admin
status:
  loadBalancer: {}
