k8s/public-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: public
  name: public
spec:
  ports:
    - name: "8300"
      port: 8300
      targetPort: 80
    - name: "8343"
      port: 8343
      targetPort: 443
  selector:
    io.kompose.service: public
status:
  loadBalancer: {}
