k8s/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port: 
              number: 8000
      - path: /files/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: filesrv
            port: 
              number: 6767
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 4200
